file structure changed and movie related file added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql: true
 #spring.data.mongodb.authentication-database = admin
 #mongodb://<username>:<password>@<host>:<port>/<database>
 
-#mongodb://root:mthn.trkmn123@127.0.0.1:27017/MyTodoApp
+mongodb://root:mthn.trkmn123@127.0.0.1:27017/moviedb
 
 #password_app => dbnr iajq thpc taaf
 spring.mail.host=smtp.gmail.com
